Fix colors in Dark mode

--- a/assets/css/neverMissAnUpdate.css
+++ b/assets/css/neverMissAnUpdate.css
@@ -48,11 +48,12 @@ h5 {
   font-size: 15px;
   width: 550px;
 }
-
 #button-addon2 {
-  border: none;
+  border:solid none;
   padding-left: 20px;
+  padding-right: 20px;
   background-color: #2c86fc;
+  border-radius: 3px;
 }
 
 h2 {
